--- a/temp2.html
+++ b/temp2.html
@@ -6,7 +6,6 @@
         <title>Document</title>
     </head>
     <body>
-        <h1>Hello h1</h1>
-        <h2>Hello h2</h2>
+        <h1>Temp2</h1>
     </body>
 </html>
