--- a/temp2.html
+++ b/temp2.html
@@ -6,6 +6,8 @@
         <title>Document</title>
     </head>
     <body>
-        <h1>Temp2</h1>
+        <h1 class="demo demo1">Head 1</h1>
+        <h2>Head 2</h2>
+        <h3>Head 3</h3>
     </body>
 </html>
